// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="APIComponent-root-154"
  >
    <header
      className="MuiPaper-root-170 MuiPaper-elevation4-176 MuiAppBar-root-162 MuiAppBar-positionFixed-163 MuiAppBar-colorPrimary-168 mui-fixed"
    >
      <div
        className="MuiToolbar-root-197 MuiToolbar-regular-199 MuiToolbar-gutters-198 APIComponent-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202 APIComponent-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <h2
          className="MuiTypography-root-224 MuiTypography-title-230 MuiTypography-colorInherit-243 APIComponent-flex-155"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <div>
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-206"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-210"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-217"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="APIComponent-spacer-159"
    />
  </div>
  <a
    aria-label="New Tournament"
    className="MuiButtonBase-root-207 MuiButton-root-263 MuiButton-fab-278 MuiButton-contained-272 MuiButton-containedSecondary-274 MuiButton-raised-275 MuiButton-raisedSecondary-277 APIComponent-actionButton-149"
    href="/new"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-264"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-210"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-217"
    />
  </a>
  <div
    className="TournamentCards-root-287"
  >
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-290 TournamentCards-card-288"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-295"
          >
            No Tournaments Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="APIComponent-root-154"
  >
    <header
      className="MuiPaper-root-170 MuiPaper-elevation4-176 MuiAppBar-root-162 MuiAppBar-positionFixed-163 MuiAppBar-colorPrimary-168 mui-fixed"
    >
      <div
        className="MuiToolbar-root-197 MuiToolbar-regular-199 MuiToolbar-gutters-198 APIComponent-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202 APIComponent-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <h2
          className="MuiTypography-root-224 MuiTypography-title-230 MuiTypography-colorInherit-243 APIComponent-flex-155"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <div>
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-206"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-210"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-217"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="APIComponent-spacer-159"
    />
  </div>
  <a
    aria-label="New Tournament"
    className="MuiButtonBase-root-207 MuiButton-root-263 MuiButton-fab-278 MuiButton-contained-272 MuiButton-containedSecondary-274 MuiButton-raised-275 MuiButton-raisedSecondary-277 APIComponent-actionButton-149"
    href="/new"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-264"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-210"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-217"
    />
  </a>
  <div
    className="TournamentCards-root-287"
  >
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-290 TournamentCards-card-288"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-295"
          >
            test0
          </span>
          <span
            className="MuiTypography-root-224 MuiTypography-body1-233 MuiTypography-colorTextSecondary-247 MuiCardHeader-subheader-296"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          3 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-207 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 TournamentCards-right-289 MuiCardActions-action-299"
          href="/tournament/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-290 TournamentCards-card-288"
      id="mock1"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-295"
          >
            test1
          </span>
          <span
            className="MuiTypography-root-224 MuiTypography-body1-233 MuiTypography-colorTextSecondary-247 MuiCardHeader-subheader-296"
          >
            cat1
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          8 Total Players
        </p>
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          6 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-207 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 TournamentCards-right-289 MuiCardActions-action-299"
          href="/tournament/mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-290 TournamentCards-card-288"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-295"
          >
            test2
          </span>
          <span
            className="MuiTypography-root-224 MuiTypography-body1-233 MuiTypography-colorTextSecondary-247 MuiCardHeader-subheader-296"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-207 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 TournamentCards-right-289 MuiCardActions-action-299"
          href="/tournament/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
